# pl_sa_detector

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
api_service/: Dockerfile  README.md  alembic.ini  poetry.toml  pyproject.toml  tox.ini
api_service/src/: main.py
api_service/src/api/: constants.py  enums.py  service.py  shortcuts.py  users_views.py  views.py
api_service/src/api_service/: settings.py
api_service/src/db/: crud.py  database.py  models.py  schemas.py
api_service/src/migrations/: env.py
api_service/src/migrations/versions/: 0ae31cfda61e_init_db.py  10bdcff62b53_0003_add_first_name_to_user.py  519de98adad0_0001_migration.py  f6e1d52a23e5_second_migration.py
api_service/tests/: test_dummy.py
ml_service/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
ml_service/src/: main.py
ml_service/src/api/: enums.py  shortcuts.py  views.py
ml_service/src/ml_service/: settings.py
ml_service/tests/: conftest.py  test_shortcuts.py
src/api/: main.py
src/api/ml/: shortcuts.py
src/api/pl_sa/: enums.py  schemas.py  shortcuts.py  views.py
src/pl_sa_detector/: settings.py
